# BSc-projects

./: README.md
Aprendizagem e Decisão Inteligentes/TAREFA_A/: TAREFA_A.knwf
Aprendizagem e Decisão Inteligentes/TAREFA_B/: TAREFA_B.knwf  producao_vestuario.csv
Computação Gráfica/GRUPO21_FASE2/: .gitignore
Computação Gráfica/GRUPO21_FASE3/: LICENSE
Computação Gráfica/GRUPO21_FASE3/Generator/: CMakeLists.txt
Computação Gráfica/GRUPO21_FASE3/Generator/include/: bezier.hpp  plane.hpp  point.hpp  util.hpp
Computação Gráfica/GRUPO21_FASE3/Generator/patches/: example.patch
Computação Gráfica/GRUPO21_FASE3/Generator/src/: bezier.cpp  box.cpp  cylinder.cpp  main.cpp  plane.cpp  point.cpp  script.py  sphere.cpp  util.cpp
Computação Gráfica/GRUPO21_FASE4/Engine/: CMakeLists.txt
Computação Gráfica/GRUPO21_FASE4/Engine/config/: solar_system.xml
Computação Gráfica/GRUPO21_FASE4/Engine/config/Phase2/: test_2_4.xml
Computação Gráfica/GRUPO21_FASE4/Engine/config/Phase4/: test_4_1.xml
Computação Gráfica/GRUPO21_FASE4/Engine/include/: VBO.hpp  color.hpp  group.hpp  light.hpp  light_directional.hpp  light_point.hpp  light_spotlight.hpp  model.hpp  parser.hpp  xml_data.hpp
Computação Gráfica/GRUPO21_FASE4/Engine/models/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  sphere_10_20_20.3d  sphere_1_8_8.3d  torus_31_27_50_50.3d
Computação Gráfica/GRUPO21_FASE4/Engine/src/: VBO.cpp  color.cpp  group.cpp  light_directional.cpp  light_point.cpp  light_spotlight.cpp  main.cpp  model.cpp  parser.cpp  point.cpp  scale.cpp  tinyxml2.cpp  xml_data.cpp
Desenvolvimento de Sistemas de Software/: README.md
Desenvolvimento de Sistemas de Software/diagrams/: Component_Diagram.vpp  DiagramaSequence.vpp  Domain_Model.vpp  Package_Class__Diagrams.vpp  UseCase_Diagrams.vpp
Desenvolvimento de Sistemas de Software/img/: README.md
Desenvolvimento de Sistemas de Software/src/: Main.java
Engenharia Web/Assignment/: README.md
Inteligência Artificial/src/: AStar.py  BFS.py  DFS.py  DLS.py  Graph.py  Greedy.py  IDS.py  Node.py  UCS.py  UI.py  main.py  multiplayer.py
Inteligência Artificial/tracks/: track1.txt  track2.txt  track3.txt  track4.txt  track5.txt  track6.txt  track7.txt
Laboratórios de Informática II/: README.md
Laboratórios de Informática II/src/: main.c  maths.c  maths.h  parse.c  parse.h  stack.c  stack.h
Programação Orientada aos Objetos/src/: Bill.java  City.java  Energy.java  House.java  Menu.java  Parse.java  SDExec.java  SmartBulb.java  SmartCamera.java  SmartDevice.java  SmartSpeaker.java  Stats.java
Sistemas Distribuídos/: trotUM.ods
Sistemas Distribuídos/src/: Client.java  ClientInputHandler.java  DataHandler.java  Frame.java  NotificationHandler.java  Rewards.java  Scooter.java  Server.java  ServerInputHandler.java  TaggedConnection.java  UI.java  (+3 more)
(+201 files in other folders)
